[gd_scene load_steps=9 format=2]

[ext_resource path="res://Images/Soldier.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Soldier.gd" type="Script" id=4]
[ext_resource path="res://Images/AngrySoldier.png" type="Texture" id=7]
[ext_resource path="res://Images/RagingAngrySoldier.png" type="Texture" id=8]
[ext_resource path="res://Images/pixil-frame-0 (19).png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.4508, 32.2276 )

[sub_resource type="CircleShape2D" id=2]
radius = 703.553

[sub_resource type="CircleShape2D" id=3]
radius = 703.428

[node name="Soldier" type="KinematicBody2D" groups=[
"soldier",
"unit",
]]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Vision" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource( 2 )

[node name="ShootRadius" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootRadius"]
shape = SubResource( 3 )

[node name="FireDelay" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Soldier" type="Sprite" parent="." groups=[
"sprite",
]]
texture = ExtResource( 1 )

[node name="AngrySoldier" type="Sprite" parent="." groups=[
"sprite",
]]
visible = false
texture = ExtResource( 7 )

[node name="RagingAngrySoldier" type="Sprite" parent="." groups=[
"sprite",
]]
visible = false
texture = ExtResource( 8 )

[node name="AbilityReady" type="Sprite" parent="."]
visible = false
position = Vector2( -4.34776, -63.5978 )
texture = ExtResource( 9 )

[node name="DashTime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Navigation2D" type="Navigation2D" parent="."]
[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Vision_body_exited"]
[connection signal="body_entered" from="ShootRadius" to="." method="_on_ShootRadius_body_entered"]
[connection signal="timeout" from="FireDelay" to="." method="_on_FireDelay_timeout"]
[connection signal="timeout" from="DashTime" to="." method="_on_DashTime_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]
